--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html class="zyyo.net">
+<html class="Kaixuan Xie.net">
 
-<head class="zyyo.net">
+<head class="Kaixuan Xie.net">
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>
-		Zyyo </title>
+		Kaixuan Xie </title>
 	<link rel="icon" href="./static/img/favicon.ico">
 	<meta name="description" content="整天半吊子和不学无术的坏孩子,梦想成为庄稼地里的读书人.....">
-	<meta name="keywords" content="zyyo,张扬YO,ZYYO,张扬主页,ZYYO引导页,zhangyang">
+	<meta name="keywords" content="Kaixuan Xie 的个人主页">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="./static/css/style.css">
 	<link rel="stylesheet" href="./static/css/root.css">
@@ -30,63 +30,30 @@
 					src="./static/img/logokuang.png">
 			</div>
 			<div class="left-div left-des">
-				<div class="left-des-item"><svg t="1705773709627" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1478"><path d="M512 249.976471c-99.388235 0-180.705882 81.317647-180.705882 180.705882s81.317647 180.705882 180.705882 180.705882 180.705882-81.317647 180.705882-180.705882-81.317647-180.705882-180.705882-180.705882z m0 301.17647c-66.258824 0-120.470588-54.211765-120.470588-120.470588s54.211765-120.470588 120.470588-120.470588 120.470588 54.211765 120.470588 120.470588-54.211765 120.470588-120.470588 120.470588z" p-id="1479"></path><path d="M512 39.152941c-216.847059 0-391.529412 174.682353-391.529412 391.529412 0 349.364706 391.529412 572.235294 391.529412 572.235294s391.529412-222.870588 391.529412-572.235294c0-216.847059-174.682353-391.529412-391.529412-391.529412z m0 891.482353C424.658824 873.411765 180.705882 686.682353 180.705882 430.682353c0-183.717647 147.576471-331.294118 331.294118-331.294118s331.294118 147.576471 331.294118 331.294118c0 256-243.952941 442.729412-331.294118 499.952941z" p-id="1480"></path></svg>China-Henan
+				<div class="left-des-item"><svg t="1705773709627" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1478"><path d="M512 249.976471c-99.388235 0-180.705882 81.317647-180.705882 180.705882s81.317647 180.705882 180.705882 180.705882 180.705882-81.317647 180.705882-180.705882-81.317647-180.705882-180.705882-180.705882z m0 301.17647c-66.258824 0-120.470588-54.211765-120.470588-120.470588s54.211765-120.470588 120.470588-120.470588 120.470588 54.211765 120.470588 120.470588-54.211765 120.470588-120.470588 120.470588z" p-id="1479"></path><path d="M512 39.152941c-216.847059 0-391.529412 174.682353-391.529412 391.529412 0 349.364706 391.529412 572.235294 391.529412 572.235294s391.529412-222.870588 391.529412-572.235294c0-216.847059-174.682353-391.529412-391.529412-391.529412z m0 891.482353C424.658824 873.411765 180.705882 686.682353 180.705882 430.682353c0-183.717647 147.576471-331.294118 331.294118-331.294118s331.294118 147.576471 331.294118 331.294118c0 256-243.952941 442.729412-331.294118 499.952941z" p-id="1480"></path></svg>Zhejiang-Hangzhou
 				</div>
 				<div class="left-des-item"><svg t="1705773906032" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2474"><path d="M729.6 234.666667H294.4V157.866667a51.2 51.2 0 0 1 51.2-51.2h332.8a51.2 51.2 0 0 1 51.2 51.2v76.8z m179.2 51.2a51.2 51.2 0 0 1 51.2 51.2v512a51.2 51.2 0 0 1-51.2 51.2H115.2a51.2 51.2 0 0 1-51.2-51.2v-512a51.2 51.2 0 0 1 51.2-51.2h793.557333z m-768 172.032c0 16.384 13.312 29.696 29.696 29.696h683.008a29.696 29.696 0 1 0 0-59.392H170.410667a29.696 29.696 0 0 0-29.696 29.696z m252.416 118.784c0 16.384 13.312 29.696 29.696 29.696h178.176a29.696 29.696 0 1 0 0-59.392H422.912a29.738667 29.738667 0 0 0-29.696 29.696z" p-id="2475"></path></svg>Sias</div>
 			</div>
 			<div class="left-div left-tag">
-				<div class="left-tag-item">网瘾
+				<div class="left-tag-item">研究生
 				</div>
-				<div class="left-tag-item">小学生
+				<div class="left-tag-item">宅
 				</div>
-				<div class="left-tag-item">大一
-				</div>
-				<div class="left-tag-item">网页
-				</div>
-				<div class="left-tag-item">linux
-				</div>
-				<div class="left-tag-item">跑者
+				<div class="left-tag-item">深度学习
 				</div>
 				<div class="left-tag-item">前端
 				</div>
-				<div class="left-tag-item">骑行</div>
+				<div class="left-tag-item">linux
+				</div>
+				<div class="left-tag-item">前端
+				</div>
 			</div>
 			<div class="left-div left-time">
 				<ul id="line">
 					<li>
 						<div class="focus"></div>
-						<div>敬请期待
-						</div>
-						<div>2024.1</div>
-					</li>
-					<li>
-						<div class="focus"></div>
-						<div>ICP备案成功
-						</div>
-						<div>2023.8</div>
-					</li>
-					<li>
-						<div class="focus"></div>
-						<div>注册域名zyyo.net
-						</div>
-						<div>2023.3</div>
-					</li>
-					<li>
-						<div class="focus"></div>
-						<div>出来后洗心革面
-						</div>
-						<div>2021.2</div>
-					</li>
-					<li>
-						<div class="focus"></div>
-						<div>...
-						</div>
-						<div>...</div>
-					</li>
-					<li>
-						<div class="focus"></div>
-						<div>搭建第一个网站</div>
-						<div>2018.1</div>
+						<div>搭建个人主页</div>
+						<div>2024.11</div>
 					</li>
 				</ul>
 			</div>
@@ -99,7 +66,7 @@
 				</div>
 				<div class="welcome">
 					Hello I' m <span class="gradientText">
-						Zyyo </span>
+						Kaixuan Xie </span>
 				</div>
 				<div class="description">👦 <span class="purpleText">Full Stack</span> Developer
 				</div>
@@ -107,12 +74,12 @@
 					to <span class="purpleText textBackground">love</span> what you do. </div>
 
 				<div class="iconContainer">
-					<a class="iconItem" onclick="" href="https://github.com/ZYYO666">
+					<a class="iconItem" onclick="" href="https://github.com/xkx-youcha">
 						<svg t="1704870335945" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2487">
                             <path d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9 23.5 23.2 38.1 55.4 38.1 91v112.5c0.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"  p-id="2488"></path>
                         </svg>
 						<div class="iconTip">Github</div>
-					</a><a class="iconItem" onclick="" href="mailto:i@zyyo.net">
+					</a><a class="iconItem" onclick="" href="2580944705@qq.com">
 						<svg t="1704870588438" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3174" >
                             <path d="M926.47619 355.644952V780.190476a73.142857 73.142857 0 0 1-73.142857 73.142857H170.666667a73.142857 73.142857 0 0 1-73.142857-73.142857V355.644952l304.103619 257.828572a170.666667 170.666667 0 0 0 220.745142 0L926.47619 355.644952zM853.333333 170.666667a74.044952 74.044952 0 0 1 26.087619 4.778666 72.704 72.704 0 0 1 30.622477 22.186667 73.508571 73.508571 0 0 1 10.678857 17.67619c3.169524 7.509333 5.12 15.652571 5.607619 24.210286L926.47619 243.809524v24.380952L559.469714 581.241905a73.142857 73.142857 0 0 1-91.306666 2.901333l-3.632762-2.925714L97.52381 268.190476v-24.380952a72.899048 72.899048 0 0 1 40.155428-65.292191A72.97219 72.97219 0 0 1 170.666667 170.666667h682.666666z"  p-id="3175"></path>
                         </svg>
